// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PostAttachmentOpenGraph should match snapshot 1`] = `
<div>
  <a
    class="PostAttachmentOpenGraph"
    href="https://www.mattermost.com/?utm_source=mattermost&utm_medium=in-product&utm_content=post_attachment_opengraph&uid=user-1&sid=&edition=team&server_version="
    location="post_attachment_opengraph"
    rel="noopener noreferrer"
    role="link"
    style="--open-graph-thumbnail-size: 80px; --open-graph-max-image-width: 392px; --open-graph-max-image-height: 240px;"
    target="_blank"
    title="Mattermost | Open Source Collaboration for Developers"
  >
    <div
      class="PostAttachmentOpenGraph__body"
    >
      <span
        class="sitename"
      >
        Mattermost.com
      </span>
      <span
        class="title"
      >
        Mattermost | Open Source Collaboration for Developers
      </span>
      <span
        class="description"
      >
        Mattermost is a secure, open source platform for communication, collaboration, and workflow orchestration across tools and teams.
      </span>
    </div>
    <div
      class="PostAttachmentOpenGraph__image large"
    >
      <div
        class="AutoHeight"
        style="transition-property: height; transition-duration: 250ms; transition-timing-function: ease; width: 100%; height: auto; overflow: visible;"
      >
        <div>
          <div
            class="file-preview__button"
          >
            <figure
              class="image-loaded-container"
            >
              <div
                class="image-loading__container"
              >
                <div
                  style="position: absolute; top: 50%; transform: translate(-50%, -50%); left: 50%;"
                >
                  <div
                    class="file__image-loading"
                  >
                    <span
                      class="LoadingSpinner"
                      data-testid="loadingSpinner"
                      id="loadingSpinner"
                    >
                      <span
                        class="fa fa-spinner fa-fw fa-pulse spinner"
                        title="Loading Icon"
                      />
                    </span>
                    <span
                      class="loader-percent"
                    />
                  </div>
                </div>
                <img
                  class="image-loading__placeholder"
                  height="205.14666666666668"
                  role="presentation"
                  src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22392%22%20height%3D%22205.14666666666668%22%20viewBox%3D%220%200%20392%20205.14666666666668%22%2F%3E"
                  width="392"
                />
              </div>
            </figure>
          </div>
          <div
            class="file-preview__button"
            style="display: none;"
          >
            <figure
              class="image-loaded-container"
            >
              <img
                alt="Mattermost | Open Source Collaboration for Developers"
                aria-label="file thumbnail"
                class="undefined"
                src="/api/v4/image?url=http%3A%2F%2Flocalhost%3A8065%2Fapi%2Fv4%2Fimage%3Furl%3Dhttp%253A%252F%252Fmattermo%E2%80%A6t.com%252Fwp-content%252Fuploads%252F2021%252F09%252FHomepage%25402x.png"
                tabindex="0"
              />
            </figure>
          </div>
          <button
            class="preview-toggle style--none"
          >
            <svg
              fill="currentColor"
              height="18"
              version="1.1"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`PostAttachmentOpenGraphBody should match snapshot 1`] = `
<div>
  <div
    class="PostAttachmentOpenGraph__body"
  >
    <span
      class="sitename"
    >
      test-sitename
    </span>
    <span
      class="title"
    >
      test-title
    </span>
    <span
      class="description"
    >
      test-description
    </span>
  </div>
</div>
`;

exports[`PostAttachmentOpenGraphBody should match snapshot 2`] = `
<div>
  <div
    class="PostAttachmentOpenGraph__body"
  >
    <span
      class="title"
    >
      test_title
    </span>
    <span
      class="description"
    >
      test_description
    </span>
  </div>
</div>
`;

exports[`PostAttachmentOpenGraphImage should match snapshot 1`] = `
<div>
  <div
    class="PostAttachmentOpenGraph__image large"
  >
    <div
      class="AutoHeight"
      style="transition-property: height; transition-duration: 250ms; transition-timing-function: ease; width: 100%; height: auto; overflow: visible;"
    >
      <div>
        <div
          class="file-preview__button"
        >
          <figure
            class="image-loaded-container"
          >
            <div
              class="image-loading__container"
            >
              <div
                style="position: absolute; top: 50%; transform: translate(-50%, -50%); left: 50%;"
              >
                <div
                  class="file__image-loading"
                >
                  <span
                    class="LoadingSpinner"
                    data-testid="loadingSpinner"
                    id="loadingSpinner"
                  >
                    <span
                      class="fa fa-spinner fa-fw fa-pulse spinner"
                      title="Loading Icon"
                    />
                  </span>
                  <span
                    class="loader-percent"
                  />
                </div>
              </div>
              <img
                class="image-loading__placeholder"
                height="205.14666666666668"
                role="presentation"
                src="data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22392%22%20height%3D%22205.14666666666668%22%20viewBox%3D%220%200%20392%20205.14666666666668%22%2F%3E"
                width="392"
              />
            </div>
          </figure>
        </div>
        <div
          class="file-preview__button"
          style="display: none;"
        >
          <figure
            class="image-loaded-container"
          >
            <img
              alt="test_image"
              aria-label="file thumbnail"
              class="undefined"
              src="/api/v4/image?url=http%3A%2F%2Flocalhost%3A8065%2Fapi%2Fv4%2Fimage%3Furl%3Dhttp%253A%252F%252Fmattermo%E2%80%A6t.com%252Fwp-content%252Fuploads%252F2021%252F09%252FHomepage%25402x.png"
              tabindex="0"
            />
          </figure>
        </div>
        <button
          class="preview-toggle style--none"
        >
          <svg
            fill="currentColor"
            height="18"
            version="1.1"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7,10L12,15L17,10H7Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentOpenGraphImage should not render when used in Permalink 1`] = `<div />`;
